...
                fontWeight = FontWeight.Bold
            )
            //input name
            SignCommonTextField(
                modifier = Modifier
                    .padding(bottom = 4.dp)
                    .testTag("tfName"),
                label = stringResource(id = R.string.label_full_name),
                value = name,
                onValueChange = onValueChange,
                placeHolder = stringResource(id = R.string.label_full_name),
                onClear = onClear,
                errorMessage = if (errorMessage != null) stringResource(id = errorMessage) else null,
...
                limit = limit
            )
            // next button
            Button(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("btnNext")
                    .padding(top = 4.dp),
                onClick = onNext
            ) {
                Text(text = stringResource(id = R.string.label_next))
            }
        }
...
