...
    Column(
        modifier = Modifier.fillMaxWidth(),
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        SignCommonTextField(
            modifier = Modifier.testTag("tfEmail"),
            value = email,
            onValueChange = onChangeEmail,
            label = stringResource(id = R.string.label_email),
            onNext = { focusManager.moveFocus(FocusDirection.Down) },
            onKeyTabOrDown = { focusManager.moveFocus(FocusDirection.Down) },
            placeHolder = stringResource(id = R.string.email_place_holder),
            errorMessage = emailErrorMessage,
            onClear = { onClearEmail.invoke() },
            enable = !progress
        )
        Spacer(modifier = Modifier.height(10.dp))
        SignCommonTextField(
            modifier = Modifier.testTag("tfPassword"),
            value = password,
            onValueChange = onChangePassword,
            label = stringResource(id = R.string.label_password),
            onNext = { focusManager.clearFocus(true) },
            onKeyTabOrDown = { focusManager.clearFocus(true) },
            placeHolder = stringResource(id = R.string.password_place_holder),
...
