<resources>
    <string name="app_name">ToringLogin</string>
    <string name="error_email_valid">It doesn\'t match the email address format.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="confirm">confirm</string>
    <string name="login_with_email">LOG IN WITH EMAIL</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="look_around">Look Around</string>
    <string name="sign_up">Sign up.</string>

    <string name="password_place_holder">input your password.</string>
    <string name="email_place_holder">input your email.</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_full_name">FullName</string>
    <string name="label_next">Next</string>
    <string name="label_confirm" translatable="false">confirm</string>

    <string name="invalid_email_format">Email format is incorrect.</string>
    <string name="invalid_password_format">Password format is incorrect.</string>

    <string name="label_login">Log in</string>

    <string name="what_s_your_name">What\'s your name?</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="describe_input_email">Enter the email where you can be contacted. No one will see this on your profile</string>

    <string name="create_a_password">Create a password</string>
    <string name="describe_input_password">Create a password with at least 6 letters on numbers. It should be something others can\'t guess</string>

    <string name="success_sign_up">Success Sign up!</string>
    <string name="go_sign_in">go sign in!</string>

    <string name="name_input_error_short">Please enter at least 2 characters for the name.</string>

    <!---->
    <string name="a11y_back" translatable="false">Navigate up</string>

    <string name="enter_the_confirmation_code">Enter the confirmation code</string>
    <string name="enter_the_confirmation_code_desc">To confirm your account, enter the 6-digit code we sent to %s.</string>
    <string name="confirmation_code" translatable="false">Confirmation code</string>
    <string name="re_register_email">Would you like to re-register your email?</string>
    <string name="password_format_error">The password must be at least 8 characters long and include an uppercase letter, a lowercase letter, a digit, and a special character.</string>


</resources>
