...
            Text(
                text = stringResource(id = R.string.enter_the_confirmation_code_desc, email),
                modifier = Modifier.padding(vertical = 6.dp)
            )
            SignCommonTextField(
                modifier = Modifier
                    .testTag("tfConfirmCode")
                    .padding(vertical = 6.dp),
                label = stringResource(id = R.string.confirmation_code),
                value = confirmCode,
                onValueChange = onValueChange,
                placeHolder = stringResource(id = R.string.confirmation_code),
                onClear = onClear,
...
